@@ -39,24 +39,12 @@ pub fn get_config() -> Result<Opt> {
     Ok(Opt::default())
 }
 
-pub fn config_dir() -> Option<PathBuf> {
-    if let Ok(home) = std::env::var("HOME") {
-        Some(PathBuf::from(home).join(".config"))
-    } else {
-        None
-    }
-}
-
-pub fn usr_share_dir() -> Option<PathBuf> {
-    Some(PathBuf::from("/usr/share"))
-}
-
 #[cfg(test)]
 mod tests {
     use super::*;
 
     #[test]
-    fn test_documentation_config() -> Result<()> {
+    fn documentation_config() -> Result<()> {
         read_config("doc/macchina.toml")?;
         Ok(())
     }
